@@ -284,15 +284,14 @@ public class CollectionPropsTest extends SolrCloudTestCase {
     }
     
     @Override
-    @SuppressWarnings({"unchecked", "rawtypes"})
     public boolean onStateChanged(Map<String, String> collectionProperties) {
       log.info("{}: state changed...", name);
       if (forceReadPropsFromZk) {
         final ZkStateReader zkStateReader = cluster.getSolrClient().getZkStateReader();
-        props = Collections.unmodifiableMap(new HashMap(zkStateReader.getCollectionProperties(collectionName)));
+        props = Map.copyOf(zkStateReader.getCollectionProperties(collectionName));
         log.info("{}: Setting props from zk={}", name, props);
       } else {
-        props = Collections.unmodifiableMap(new HashMap(collectionProperties));
+        props = Map.copyOf(collectionProperties);
         log.info("{}: Setting props from caller={}", name, props);
       }
       
